# shiftpilot

./: .gitignore  desktop_app.py  pyproject.toml
.docs/: SHIFTPILOT_PROPOSAL.md  frontend-svelte.md  previous_data.csv  update.md
.docs/stitch_pure_duty/: DESIGN.md  code.html
backend/app/: main.py  project_root.py
backend/app/api/: history.py  manual_staff.py  members.py  ng_entries.py  schedule.py
backend/app/core/: config.py  csv_io.py  history_state.py  ng_parser.py  solver.py
backend/app/schemas/: history.py  member.py  ng_entry.py  schedule.py  shift.py
backend/tests/: test_config.py  test_csv_io.py  test_history_state.py  test_manual_staff_api.py  test_members_api.py  test_ng_bulk_api.py  test_ng_parser.py  test_solver.py
branding/: generate_icon.py
config/: settings.yaml
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/lib/: AppLogoMark.svelte  NgPasteBulk.svelte  PastHistory.svelte  ScheduleStats.svelte  ShiftCalendar.svelte  Sidebar.svelte  StaffManager.svelte  api.js  fuzzyMatch.js  scheduleStats.js  store.js
