[project]
name = "shiftpilot"
version = "0.1.0"
description = "Shift scheduling desktop application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "setuptools>=82.0.1",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
shiftpilot = "desktop_app:main"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pyinstaller>=6.20.0",
]
